--- a/tests/templates/kuttl/opa-authorization/10-opa-rego.yaml
+++ b/tests/templates/kuttl/opa-authorization/10-opa-rego.yaml
@@ -6,7 +6,9 @@ commands:
       # Trino Rego rules provided by the Stackable Data Platform
       kubectl create configmap trino-opa-rules \
         --namespace=$NAMESPACE \
-        --from-file=rego/trino.rego
+        --from-file=trino_rules/actual_permissions.rego \
+        --from-file=trino_rules/required_permissions.rego \
+        --from-file=trino_rules/verification.rego
       kubectl label configmaps trino-opa-rules \
         opa.stackable.tech/bundle=trino \
         --namespace=$NAMESPACE
@@ -14,7 +16,7 @@ commands:
       # Trino policies provided by the customer
       kubectl create configmap trino-opa-policies \
         --namespace=$NAMESPACE \
-        --from-file=rego/policies.rego
+        --from-file=trino_policies.rego
       kubectl label configmaps trino-opa-policies \
         opa.stackable.tech/bundle=trino \
         --namespace=$NAMESPACE
