add iceberg for testing

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -92,6 +92,7 @@ tests:
   - name: opa-authorization
     dimensions:
       - trino-latest
+      - hive
       - opa
       - openshift      
 suites:
